tests/ui/typeck/explicit_dynamic_bytes_conversion.stderr
error: cannot convert `bytes16` to `bytes`
  --> ROOT/tests/ui/typeck/explicit_dynamic_bytes_conversion.sol:LL:CC
   |
LL |         bytes memory a1 = bytes(b4);
   |                           ^^^^^^^^^ invalid explicit type conversion

error: cannot convert `bytes10` to `bytes`
  --> ROOT/tests/ui/typeck/explicit_dynamic_bytes_conversion.sol:LL:CC
   |
LL |         bytes memory a2 = bytes(b3);
   |                           ^^^^^^^^^ invalid explicit type conversion

error: cannot convert `bytes2` to `bytes`
  --> ROOT/tests/ui/typeck/explicit_dynamic_bytes_conversion.sol:LL:CC
   |
LL |         bytes memory a3 = bytes(b2);
   |                           ^^^^^^^^^ invalid explicit type conversion

error: cannot convert `bytes1` to `bytes`
  --> ROOT/tests/ui/typeck/explicit_dynamic_bytes_conversion.sol:LL:CC
   |
LL |         bytes memory a4 = bytes(b1);
   |                           ^^^^^^^^^ invalid explicit type conversion

error: aborting due to 4 previous errors

